# feastruct

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
fea/: bcs.py
fea/elements/: frame.py  frame2d.py
feastruct/: __init__.py
feastruct/fea/: bcs.py  fea.py  frame_analysis.py
feastruct/fea/elements/: frame.py
feastruct/post/: post2d.py
post/: feastruct.mplstyle  mplStyle.py  post2d.py
solvers/: linstatic.py
