[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feastruct"
version = "0.1.1"
description = "FE-Analysis for Python"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/BeneStrahm/feastruct", Source = "https://github.com/BeneStrahm/feastruct", "Forked From" = "https://github.com/robbievanleeuwen/feastruct" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["examples*", "tests*"]