[metadata]
name = feastruct
version = 0.1.1
description = Finite Element Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BeneStrahm/feastruct
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/BeneStrahm/feastruct
    Forked From = https://github.com/robbievanleeuwen/feastruct

[options]
packages = find:
python_requires = >=3.11
include_package_data = True